fixes alignment bugs on blog and portfolio detail

--- a/sass/pages/_blog.scss
+++ b/sass/pages/_blog.scss
@@ -1,5 +1,6 @@
 .blog, .archive {
     .page-content.grid {
+        flex-direction: row;
         align-content: flex-start;
         flex-wrap: wrap;
         padding-bottom: ($spacing*2);
