--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -8,7 +8,6 @@
         }
 
         .banner {
-            flex: 1;
             width: 50%;
             align-self: flex-start;
             height: 90vh;
@@ -23,7 +22,6 @@
 
         .page-content {
             margin: 0;
-            flex: 1;
             width: 50%;
             height: 90vh;
             overflow: scroll;
