--- a/style.css
+++ b/style.css
@@ -537,6 +537,10 @@ body {
         margin: 0 -2.4em 1.5em -2.4em; }
 
 .blog .page-content.grid, .archive .page-content.grid {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -ms-flex-line-pack: start;
       align-content: flex-start;
   -ms-flex-wrap: wrap;
@@ -650,9 +654,6 @@ body {
           -ms-flex-order: 1;
               order: 1; }
     body.page-template-portfolio-template .banner {
-      -webkit-box-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
       width: 50%;
       -ms-flex-item-align: start;
           align-self: flex-start;
@@ -664,9 +665,6 @@ body {
       display: none; }
     body.page-template-portfolio-template .page-content {
       margin: 0;
-      -webkit-box-flex: 1;
-          -ms-flex: 1;
-              flex: 1;
       width: 50%;
       height: 90vh;
       overflow: scroll;
